--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,5 +1,5 @@
 #hours h3, h4 {
-  font: 500 29px/1em Helvetica, sans-serif;
+  font: 500 29px/1em 'Knockout Bantamweight', Helvetica, sans-serif;
   text-shadow: 0 0 20px #000;
   color: white;
   font-weight: 500;
