--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,6 +2,12 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
 body {
   background: white;
+}
+
+@font-face {
+  font-family: 'Knockout Bantamweight';
+  src: font-url(../fonts/Knockout-HTF47-Bantamweight.ttf);
 }
