--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -11,3 +11,9 @@ body {
   font-family: 'Knockout Bantamweight';
   src: asset-url('Knockout-HTF47-Bantamweight.ttf');
 }
+
+#scrollify {
+  background-image: asset-url('paper-background.jpg');
+  max-width: 860px;
+  position: relative;
+}
