--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,9 +11,8 @@
     = favicon_link_tag 'favicon.ico'
 
   %body
-    .row
-      .small-12.medium-4.large-4.columns.small-text-center
-        = render 'layouts/header'
-      .small-12.medium-9.large-9.columns
-        = yield
+    .small-12.medium-4.large-3.columns.small-text-center
+      = render 'layouts/header'
+    .small-12.medium-8.large-9.columns#scrollify
+      = yield
 
