--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,5 +14,6 @@
     .small-12.medium-4.large-3.columns.small-text-center
       = render 'layouts/header'
     .small-12.medium-8.large-9.columns#scrollify
+      = render 'layouts/navbar'
       = yield
 
