--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,11 +1,12 @@
-%ul#navbar
-  %li
-    = link_to 'Menu', action: 'menu'
-  %li
-    = link_to 'Catering', action: 'catering'
-  %li
-    = link_to 'Locations', action: 'locations'
-  %li
-    = link_to 'About', action: 'about'
-  %li
-    = link_to 'Home', action: 'index'
+%nav.top-bar
+  %ul
+    %li
+      = link_to 'MENU', action: 'menu'
+    %li
+      = link_to 'CATERING', action: 'catering'
+    %li
+      = link_to 'LOCATIONS', action: 'locations'
+    %li
+      = link_to 'ABOUT', action: 'about'
+    %li
+      = link_to 'HOME', action: 'index'
