--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -1,10 +1,29 @@
-#navbar {
-  display: block;
+nav {
+  margin-left: 0;
+}
+
+nav ul {
   list-style-type: none;
   width: 100%;
   position: relative;
+  display: flex;
+  align-items: stretch;
+  margin: 0;
+  padding: 0;
+  max-height: 80px;
 }
 
-#navbar li {
-  display: inline;
+nav ul li {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  vertical-align: top;
+  line-height: 4em;
+}
+
+nav ul li a {
+  width: 100%;
+  height: 100%;
+  color: #000000;
+  font: 500 20px/1em 'Carrosserie-Regular', Helvetica, sans-serif;
 }
