--- a/app/views/menu_pizzas/_form.html.haml
+++ b/app/views/menu_pizzas/_form.html.haml
@@ -10,5 +10,6 @@
     = f.label :description
     = f.text_area :description
 
-    = f.submit 'Add Toppings', name: 'add-toppings'
+    = f.select :topping_ids, Topping.all.collect {|x| [x.name, x.id]}, :multiple => true
 
+    = f.submit 'Add Toppings', name: 'add-toppings'
