works for single topping, going to try switching to fields for to do multiple references at the same time

--- a/app/views/menu_pizzas/_form.html.haml
+++ b/app/views/menu_pizzas/_form.html.haml
@@ -10,6 +10,6 @@
     = f.label :description
     = f.text_area :description
 
-    = f.select :topping_ids, Topping.all.collect {|x| [x.name, x.id]}, :multiple => true
+    = f.select(:topping_ids, @toppings, {multiple: true})
 
     = f.submit 'Add Toppings', name: 'add-toppings'
