--- a/app/views/menu_pizzas/_form.html.haml
+++ b/app/views/menu_pizzas/_form.html.haml
@@ -2,14 +2,16 @@
   - if @menu_pizza.errors.any?
     #error_explanation
       %h2 = pluralize(@menu_pizza.errors.count, 'error') prohibted this post from being saved
-
   .field
     = f.label :name
     = f.text_area :name
-
     = f.label :description
     = f.text_area :description
-
-    = f.select(:topping_ids, @toppings, {multiple: true})
-
-    = f.submit 'Add Toppings', name: 'add-toppings'
+    - if @menu_pizza.persisted?
+      %ul
+        - @toppings.each do |t|
+          %li
+            = check_box_tag :topping_ids, t.id, @menu_pizza.toppings.include?(t), :name => 'menu_pizza[topping_ids][]'
+            %label
+              = t.name
+  = submit_tag 'Create'
