finishes sizes for pizzas

--- a/app/views/menu_pizzas/show.html.haml
+++ b/app/views/menu_pizzas/show.html.haml
@@ -1,6 +1,10 @@
 = @menu_pizza.name
 #p
   = @menu_pizza.description
+  = @menu_pizza.small_price
+  = @menu_pizza.medium_price
+  = @menu_pizza.large_price
+
 - @menu_pizza.toppings.each do |t|
   = t.name
 
