--- a/app/views/menu_pizzas/_form.html.haml
+++ b/app/views/menu_pizzas/_form.html.haml
@@ -7,6 +7,13 @@
     = f.text_area :name
     = f.label :description
     = f.text_area :description
+    = f.label :small_price
+    = f.number_field :small_price, step: 'any'
+    = f.label :medium_price
+    = f.number_field :medium_price, step: 'any'
+    = f.label :large_price
+    = f.number_field :large_price, step: 'any'
+
     - if @menu_pizza.persisted?
       %ul
         - @toppings.each do |t|
