adds time variable to delivery box and adds full CRUD actions for pizza

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,4 +17,5 @@
       = link_to image_tag('youtube-icon.png'), 'https://www.youtube.com/channel/UCipXTGYDkq4EIH7GhtzZ2Dw'
     %li
       = link_to image_tag('google-icon.png'), 'https://plus.google.com/112767306130753951581'
-    %p © Copyright Pagliacci 2015
+    %p © PAGLIACCI
+    = Time.now.year
