--- a/app/views/menu_pizzas/index.html.haml
+++ b/app/views/menu_pizzas/index.html.haml
@@ -1,14 +1,2 @@
 = link_to 'Add New Pizza', controller: 'menu_pizzas', action: 'new'
-- cache @menu_pizzas do
-  - @menu_pizzas.each do |p|
-    %p.medium-4.large-4.columns
-      %b
-        = p.name
-      %br
-      = p.description
-      %br
-      = p.small_price
-      •
-      = p.medium_price
-      •
-      = p.large_price
+= render 'menu_pizzas'
