--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,8 @@
       = render 'layouts/header'
     .small-12.medium-8.large-9.columns#scrollify
       = render 'layouts/navbar'
+      %p.notice
+        = notice
+      %p.alert
+        = alert
       = yield
