--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,7 +1,10 @@
 %nav
   %ul
     %li
-      = link_to 'Log out', destroy_user_session_path, :method => :delete
+      - if user_signed_in?
+        = link_to 'Log out', destroy_user_session_path, :method => :delete
+      - else
+        = link_to 'Login or Sign up', new_user_session_path
     %li
     %li
     %li
