--- a/app/views/menu/index.html.haml
+++ b/app/views/menu/index.html.haml
@@ -1,7 +1,11 @@
-- @seasonal_toppings.each do |s|
+- if user_signed_in? && current_user.admin == true
+  = link_to 'Edit Menu', menu_pizzas_path
+- else
+  %p Login to edit this menu
+- @seasonal_toppings.each do |t|
   %p.medium-4.large-4.columns
     %b
-      = s.name
+      = t.name
     %br
 
 - @menu_toppings.each do |m|
