--- a/app/views/menu/index.html.haml
+++ b/app/views/menu/index.html.haml
@@ -1,7 +1,4 @@
-- if user_signed_in? && current_user.admin == true
-  = link_to 'Edit Menu', menu_pizzas_path
-- else
-  %p Login to edit this menu
+= render 'layouts/admin_access'
 - @seasonal_toppings.each do |t|
   %p.medium-4.large-4.columns
     %b
