--- a/app/views/menu/index.html.haml
+++ b/app/views/menu/index.html.haml
@@ -1,49 +1,49 @@
 = render 'layouts/admin_access'
-- @seasonal_toppings.each do |t|
-  %p.medium-4.large-4.columns
-    %b
-      = t.name
-    %br
+  - @seasonal_toppings.each do |seasonal_topping|
+      %p.medium-4.large-4.columns
+        %b
+          = seasonal_topping.name
+        %br
 
-- @menu_toppings.each do |m|
-  %p.medium-4.large-4.columns
-    %b
-      = m.name
-    %br
+- @menu_toppings.each do |menu_toppings|
+    %p.medium-4.large-4.columns
+      %b
+        = menu_toppings.name
+      %br
 
-- @seasonal_pizzas.each do |s|
+- @seasonal_pizzas.each do |seasonal_pizzas|
   %p.medium-4.large-4.columns
     %b
-      = s.name
+      = seasonal_pizzas.name
     %br
-    = s.description
+    = seasonal_pizzas.description
     %br
-    = s.small_price
+    = seasonal_pizzas.small_price
     •
-    = s.medium_price
+    = seasonal_pizzas.medium_price
     •
-    = s.large_price
+    = seasonal_pizzas.large_price
 
-- @menu_pizzas.each do |p|
+- @menu_pizzas.each do |menu_pizzas|
   %p.medium-4.large-4.columns
     %b
-      = p.name
+      = menu_pizzas.name
     %br
-    = p.description
+    = menu_pizzas.description
     %br
-    = p.small_price
+    = menu_pizzas.small_price
     •
-    = p.medium_price
+    = menu_pizzas.medium_price
     •
-    = p.large_price
+    = menu_pizzas.large_price
 
-- @salads.each do |s|
+- @salads.each do |salad|
   %p.medium-4.large-4.columns
     %b
-      = s.name
+      = salad.name
     %br
-    = s.small_price
+    = salad.small_price
     •
-    = s.medium_price
+    = salad.medium_price
     •
-    = s.large_price
+    = salad.large_price
