add toppings association to seed file and add toppings to menu pizza index

--- a/app/views/menu_pizzas/index.html.haml
+++ b/app/views/menu_pizzas/index.html.haml
@@ -14,3 +14,7 @@
   = p.large_price
   %br
   = link_to 'Edit', edit_menu_pizza_path(p)
+  %ol
+    - p.toppings.each do |t|
+      %li
+        = t.name
