remove hypens from phone link

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,9 +4,9 @@
     = image_tag 'order-online-mouse-out.jpg'
   %h3 CALL FOR DELIVERY
   %h4
-    = link_to '206.726.1717', 'tel:206-726-1717'
+    = link_to '206.726.1717', 'tel:2067261717'
     •
-    = link_to '425.453.1717', 'tel:425-453-1717'
+    = link_to '425.453.1717', 'tel:4254531717'
   %h5 DELIVERY 5-11 TODAY!
 %ul#social
   %li
