--- a/app/views/menu_pizzas/_form.html.haml
+++ b/app/views/menu_pizzas/_form.html.haml
@@ -19,14 +19,16 @@
     = f.number_field :medium_price, step: 'any'
     = f.label :large_price
     = f.number_field :large_price, step: 'any'
-
-    - if @menu_pizza.persisted?
-      %ul
-        - @toppings.each do |t|
-          %li
-            = check_box_tag "#{t.name}", t.id, @menu_pizza.toppings.include?(t), :name => 'menu_pizza[topping_ids][]'
-            %label
-              = t.name
-      = check_box 'menu_pizza', 'seasonal'
-      = check_box 'menu_pizza', 'active'
-  = submit_tag 'Create'
+    %ul
+      - @toppings.each do |t|
+        %li
+          = check_box_tag "#{t.name}", t.id, @menu_pizza.toppings.include?(t), :name => 'menu_pizza[topping_ids][]'
+          %label
+            = t.name
+    = check_box 'menu_pizza', 'seasonal'
+    = check_box 'menu_pizza', 'active'
+  - if @menu_pizza.persisted?
+    = submit_tag 'Update'
+    = link_to 'Delete', menu_pizza_path(@menu_pizza), method: :delete
+  - else
+    = submit_tag 'Create'
