--- a/app/views/menu_pizzas/index.html.haml
+++ b/app/views/menu_pizzas/index.html.haml
@@ -2,20 +2,20 @@
   = link_to 'Add New Pizza', controller: 'menu_pizzas', action: 'new'
 %br
 - @menu_pizzas.each do |p|
-  %br
-  %b
-    = p.name
-  %br
-  = p.description
-  %br
-  = p.small_price
-  •
-  = p.medium_price
-  •
-  = p.large_price
-  %ol
-    - p.toppings.each do |t|
-      %li
-        = t.name
-  - if policy(@menu_pizzas).update?
-    = link_to 'Edit', edit_menu_pizza_path(p)
+  .large-4.columns
+    %b
+      = p.name
+    %br
+    = p.description
+    %br
+    = p.small_price
+    •
+    = p.medium_price
+    •
+    = p.large_price
+    %ol
+      - p.toppings.each do |t|
+        %li
+          = t.name
+    - if policy(@menu_pizzas).update?
+      = link_to 'Edit', edit_menu_pizza_path(p)
