--- a/app/views/salads/show.html.haml
+++ b/app/views/salads/show.html.haml
@@ -2,3 +2,6 @@
 = @salad.small_price
 = @salad.medium_price
 = @salad.large_price
+
+- if policy(@salad).update?
+  = link_to 'Edit', edit_salad_path(@salad)
