--- a/app/views/toppings/show.html.haml
+++ b/app/views/toppings/show.html.haml
@@ -1,6 +1,8 @@
 = "Name: #{@topping.name.humanize}"
-= link_to 'Edit', edit_topping_path(@topping)
 - if @topping.seasonal?
   Seasonal
 - if @topping.active?
   Active
+
+- if policy(@topping).update?
+  = link_to 'Edit', edit_topping_path(@topping)
