--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -1,37 +1,42 @@
 nav {
   width: 100%;
-  margin-top: 30px;
 }
 
-nav li {
-  display: inline-block;
-}
-
-nav ul {
-  text-align: justify;
-  list-style-type: none;
-  width: 100%;
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
-  max-height: 80px;
-}
-
-nav ul:after {
-    content: '';
-    display: inline-block;
-    width: 100%;
-}
-
-nav ul li {
+nav a {
   text-align: center;
   padding: 0 0 0 0;
   margin: 0 0 0 0;
-  vertical-align: top;
+  width: 33%;
+  height: 33%;
+  color: #A22921;
+  font: 500 20px/1em 'Carrosserie-Regular', Helvetica, sans-serif;
+  border-top: 31px;
 }
 
-nav ul li a {
-  width: 100%;
-  height: 100%;
-  color: #000000;
-  font: 500 20px/1em 'Carrosserie-Regular', Helvetica, sans-serif;
+#delivery-hours {
+  text-align: center;
+  text-shadow: 0 0 20px #000;
+  font-size: 21px;
+  color: white;
+}
+
+#phone-numbers {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  text-align: center;
+  text-shadow: 0 0 20px #000;
+  font-size: 24px;
+  color: white;
+}
+
+#logo {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+}
+
+.nav-section a:hover {
+  color: #A22921;
+  border-bottom: thick solid #A22921;
 }
