--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,12 +9,13 @@
     = csrf_meta_tags
     = favicon_link_tag 'favicon.ico'
   %body
-    .small-12.medium-4.large-3.columns.small-text-center
-      = render 'layouts/header'
-    .small-12.medium-8.large-9.columns#scrollify
+    = render 'layouts/user'
+    = render 'layouts/header'
+    .row#paper
       = render 'layouts/navbar'
       %p.notice
         = notice
       %p.alert
         = alert
-      = yield
+      .large-12.columns
+        = yield
