--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -2,11 +2,12 @@
   %nav.top-bar
     = link_to 'ABOUT', '/about'
     |
-    = link_to 'MENU', '/menu'
+    = link_to 'LOCATIONS', '/locations'
+    |
+    = link_to 'Slices', '/slices'
     |
     = link_to 'CATERING', '/catering'
     |
-    = link_to 'LOCATIONS', '/locations'
-    |
-    = link_to 'ORDER ONLINE!', 'order.pagliacci.com', id: 'order-online'
+    = link_to 'MENU', '/menu'
+
 
