--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,8 +1,5 @@
 body {
-  background-image: asset-url('catering');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-image: asset-url('repeating-art-paper-background');
 }
 
 @font-face {
@@ -21,8 +18,7 @@ body {
 }
 
 #paper {
-  background-image: asset-url('paper-background');
-  background-size: cover;
+
   border-radius: 20px;
 }
 
