--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,20 @@
-
+.row
+  .small-12.large-8.columns
+    %h1.red-underline
+      SLICE OF THE DAY
+    %h2
+      THE HAWAIIAN
+    = image_tag 'hawaiian.jpg'
+  .small-12.large-4.columns
+    %h1.red-underline
+      SEASONAL SPECIALS
+    = image_tag 'salumi-combo.jpg'
+    %h2
+      SALUMI COMBO
+    = image_tag 'grand-salami.jpg'
+    %h2
+      GRAND SALAMI
+    .white-bg
+      %h3
+        GELATIAMO'S PEANUT BUTTER CUP
+      = image_tag 'peanut-butter-cup.jpg'
