--- a/app/views/layouts/_user.html.haml
+++ b/app/views/layouts/_user.html.haml
@@ -1,4 +1,5 @@
-- if user_signed_in?
-  = link_to 'Log out', destroy_user_session_path, method: :delete
-- else
-  = link_to 'Sign in or create an account', 'new_user_sesion_path'
+.row
+  - if user_signed_in?
+    = link_to 'Log out', destroy_user_session_path, method: :delete
+  - else
+    = link_to 'Sign in or create an account', 'new_user_sesion_path'
