--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,13 +1,15 @@
-.sticky
-  %nav.top-bar
+%ul#nav
+  %li
+  %li
     = link_to 'ABOUT', '/about'
-    |
+  %li
     = link_to 'LOCATIONS', '/locations'
-    |
+  %li
     = link_to 'Slices', '/slices'
-    |
+  %li
     = link_to 'CATERING', '/catering'
-    |
+  %li
     = link_to 'MENU', '/menu'
+  %li
 
 
