--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,13 @@
     = csrf_meta_tags
     = favicon_link_tag 'favicon.ico'
   %body
-    = render 'layouts/user'
+    .row
+    - if user_signed_in?
+      = link_to 'Log out', destroy_user_session_path, method: :delete
+    - else
+      = link_to 'Sign in or create an account', 'new_user_sesion_path'
     = render 'layouts/header'
+    = render 'layouts/order_bar'
     .row#paper
       = render 'layouts/navbar'
       - if flash[:notice]
