--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,22 +1,33 @@
-nav {
+#nav {
+  margin-top: 1rem;
+  border-top: 1rem;
   width: 100%;
   text-align: center;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
   background-color: transparent !important;
+  text-align: justify;
+  margin-left: 0px;
+  li {
+    display: inline-block;
+    a {
+      text-align: center;
+      padding: 0 0 0 0;
+      margin: 0 0 0 0;
+      width: 33%;
+      height: 33%;
+      font: 500 20px/1em 'Carrosserie-Regular', Helvetica, sans-serif;
+      border-top: 31px;
+    }
+  }
 }
 
-nav a {
-  text-align: center;
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
-  width: 33%;
-  height: 33%;
-  font: 500 20px/1em 'Carrosserie-Regular', Helvetica, sans-serif;
-  border-top: 31px;
+#nav:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
 }
 
-.nav-section a:hover {
-  color: #A22921;
-  border-bottom: thick solid #A22921;
+#nav a:hover {
+  border-bottom: thick solid black;
 }
+
+
