--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,20 +1,21 @@
 .row
-  .small-12.large-8.columns
+  .small-12.large-12.columns
     %h1.red-underline
-      SLICE OF THE DAY
-    %h2
-      THE HAWAIIAN
+      SLICE OF THE DAY:
+      %h2
+        THE HAWAIIAN
     = image_tag 'hawaiian.jpg'
-  .small-12.large-4.columns
-    %h1.red-underline
+  .small-12.large-6.columns
+    %h1
       SEASONAL SPECIALS
     = image_tag 'salumi-combo.jpg'
     %h2
       SALUMI COMBO
+  .small-12.large-6.columns
     = image_tag 'grand-salami.jpg'
     %h2
       GRAND SALAMI
-    .white-bg
-      %h3
-        GELATIAMO'S PEANUT BUTTER CUP
-      = image_tag 'peanut-butter-cup.jpg'
+  .small-12.large-6.columns.white-bg
+    %h3
+      GELATIAMO'S PEANUT BUTTER CUP
+    = image_tag 'peanut-butter-cup.jpg'
