--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,10 +2,10 @@
   margin-top: 1rem;
   border-top: 1rem;
   width: 100%;
-  text-align: center;
-  background-color: transparent !important;
   text-align: justify;
   margin-left: 0px;
+  margin-bottom: 0px;
+  max-height: 1.4rem;
   li {
     display: inline-block;
     a {
