--- a/app/views/menu_pizzas/show.html.haml
+++ b/app/views/menu_pizzas/show.html.haml
@@ -14,3 +14,4 @@
 
 - if policy(@menu_pizza).update?
   = link_to 'Edit', edit_menu_pizza_path(@menu_pizza)
+  = link_to 'Delete', menu_pizza_path(@menu_pizza), method: :delete
