--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -12,14 +12,15 @@
   %b Seating Capacity:
   = @location.seating_capacity
 %p
-  = @location.address.line1
-  = @location.address.line2
-  = @location.address.city
-  = @location.address.state
-  = @location.address.zip
+  - if @location.address
+    = @location.address.line1
+    = @location.address.line2
+    = @location.address.city
+    = @location.address.state
+    = @location.address.zip
 
-= link_to 'Edit', edit_location_path(@location)
-\|
 = link_to 'Back', locations_path
-\|
-= link_to 'Delete', location_path(@location), method: :delete
+
+- if policy(@location).update?
+  = link_to 'Edit', edit_location_path(@location)
+  = link_to 'Delete', location_path(@location), method: :delete
