--- a/app/views/menu_pizzas/_form.html.haml
+++ b/app/views/menu_pizzas/_form.html.haml
@@ -32,8 +32,7 @@
             = t.name
     = check_box 'menu_pizza', 'seasonal'
     = check_box 'menu_pizza', 'active'
+  = submit_tag 'Save'
   - if @menu_pizza.persisted?
-    = submit_tag 'Update'
     = link_to 'Delete', menu_pizza_path(@menu_pizza), method: :delete
-  - else
-    = submit_tag 'Create'
+
