--- a/app/views/toppings/_form.html.haml
+++ b/app/views/toppings/_form.html.haml
@@ -10,8 +10,7 @@
     = check_box 'topping', 'seasonal'
     = check_box 'topping', 'active'
 
-    - if @topping.persisted?
-      = submit_tag 'Update'
-      = link_to 'Delete', topping_path(@topping), method: :delete
-    - else
-      = submit_tag 'Create'
+  = submit_tag 'Save'
+  - if @topping.persisted?
+    = link_to 'Delete', topping_path(@topping), method: :delete
+
