--- a/app/views/gelatos/_form.html.haml
+++ b/app/views/gelatos/_form.html.haml
@@ -3,7 +3,6 @@
     #error_explanation
       %h2
       = pluralize(@gelato.errors.count, 'error') + ' prohibited this post from being saved'
-
       %ul
         - @gelato.errors.full_messages.each do |msg|
           %li
@@ -11,8 +10,10 @@
   .field
     = f.label :name
     = f.text_area :name
+  .field
     = f.label :description
     = f.text_area :description
+  .field
     = f.label :dairy
     = f.check_box :dairy
   = submit_tag 'Save'
