--- a/app/views/salads/_form.html.haml
+++ b/app/views/salads/_form.html.haml
@@ -13,13 +13,13 @@
     = f.text_area :name
   .field
     = f.label :small_price
-    = f.number_field :small_price, step: 'any'
+    = f.text_field :small_price, step: 'any'
   .field
     = f.label :medium_price
-    = f.number_field :medium_price, step: 'any'
+    = f.text_field :medium_price, step: 'any'
   .field
     = f.label :large_price
-    = f.number_field :large_price, step: 'any'
+    = f.text_field :large_price, step: 'any'
   .field
     %ul
       - @toppings.each do |t|
